...
          // but it would be nice to do something more elegant in the future.
          style={{maxHeight: 0.85 * deviceHeight}}>
          <Dialog.Title>
            <View>
              {/* TODO: Add proper styling here, e.g. remove lines from
               the box with the categories and spaces between the title text*/}
              <Text variant="titleLarge">Select a category</Text>
              <Text>{transaction.name}</Text>
            </View>
          </Dialog.Title>
          <Dialog.ScrollArea>
            <CategoryList
              onItemPress={(category: string) => {
...
