...
        </Dialog.Title>
        <Dialog.ScrollArea style={styles.container}>
          <Controller
            control={control}
            render={({field: {onChange, onBlur, value}}) => (
              <TextInput
                accessibilityLabel="Category name"
                mode="outlined"
                placeholder="Category name"
                onBlur={onBlur}
                onChangeText={onChange}
                value={value}
                style={styles.input}
...
          </Button>
          <Button
            onPress={() => {
              hideModal();
              handleSubmit(onSubmit)();
            }}>
            Save
          </Button>
        </Dialog.Actions>
      </Dialog>
    </Portal>
  );
};
...
